--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,6 @@
-rootProject.name='temporalio'
 include 'temporal-serviceclient'
 include 'temporal-sdk'
+include 'temporal-kotlin'
 include 'temporal-testing'
 include 'temporal-testing-junit4'
 include 'temporal-testing-junit5'
